--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
  			<artifactId>jquery</artifactId>
  			<version>3.2.0</version>
  		</dependency>
+ 		<dependency>
+   			<groupId>org.json</groupId>
+   			<artifactId>json</artifactId>
+   			<version>20080701</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
