--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
    			<artifactId>json</artifactId>
    			<version>20080701</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.mashape.unirest</groupId>
+    		<artifactId>unirest-java</artifactId>
+    		<version>1.4.9</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
