Add configuration to access DB at Azure VM

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost/db-yukproduktif-reminder
-spring.datasource.username=postgres
-spring.datasource.password=superuser
+#spring.datasource.url=jdbc:postgresql://localhost/db-yukproduktif-reminder
+#spring.datasource.username=postgres
+#spring.datasource.password=superuser
+#spring.jpa.generate-ddl=true
+
+spring.datasource.url=jdbc:postgresql://52.187.116.59:5432/yukproduktifreminder
+spring.datasource.username=yukproduktifreminder
+spring.datasource.password=reminder
 spring.jpa.generate-ddl=true
+server.port=0
