Configure jar deployment to azure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ install:
 
 script:
 - mvn test
+
+deploy:
+  provider: azure_web_apps
+  skip_cleanup: true
+  file: "Yuk-Produktif-Reminder.jar"
+  on: branch_bot_eki
