Fix wrong branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ deploy:
   provider: azure_web_apps
   skip_cleanup: true
   file: "Yuk-Produktif-Reminder.jar"
-  on: branch_bot_eki
+  on: master
